@@ -1,3 +1,10 @@
+2009-12-12 Harri Pitkänen <hatapitk@iki.fi>
+	* Support multiple paragraph checking in Python
+	  grammar checking API.
+
+2009-11-26 Harri Pitkänen <hatapitk@iki.fi>
+	* Add hyphenator factory.
+
 2009-11-22 Harri Pitkänen <hatapitk@iki.fi>
 	* Remove unnecessary header hyphenator.hpp.
 
